# sdl2-opengl-gamedev

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  build.sh
SDLGameDev/: SDLGameDev.sln
SDLGameDev/SDLGameDev/: .editorconfig  SDLGameDev.vcxproj  SDLGameDev.vcxproj.filters  main.cpp
SDLGameDev/SDLGameDev/assets/map/: level_2.txt  level_7.txt
SDLGameDev/SDLGameDev/src/: CustomTypes.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IsoEngine.cpp  IsoEngine.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
assets/map/: 0_0_level.txt  0_1024_level.txt  0_1056_level.txt  0_128_level.txt  0_160_level.txt  0_192_level.txt  0_224_level.txt  0_256_level.txt  0_288_level.txt  0_320_level.txt  0_32_level.txt  0_352_level.txt  0_384_level.txt  0_416_level.txt  0_448_level.txt  0_480_level.txt  0_512_level.txt  0_544_level.txt  0_576_level.txt  0_608_level.txt  0_640_level.txt  0_64_level.txt  0_672_level.txt  0_704_level.txt  0_736_level.txt  0_768_level.txt  0_800_level.txt  0_832_level.txt  0_864_level.txt  0_896_level.txt  0_928_level.txt  0_960_level.txt  0_96_level.txt  0_992_level.txt  1024_0_level.txt  1024_1024_level.txt  1024_1056_level.txt  1024_128_level.txt  1024_160_level.txt  1024_192_level.txt  (+2090 more)
libs/glm/: CMakeLists.txt
libs/glm/ext/: quaternion_common.hpp  vector_common.hpp
sandbox/: SandboxApp.cpp
shaders/: line_shader.frag.spv  point_light.frag.spv  point_light.vert  point_light.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: Camera.h  CoordinateSystem.h  CustomTypes.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GlobalConfiguration.h  IsoEngine.cpp  IsoEngine.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Map.cpp  Map.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  TextureManager.cpp  TextureManager.h  Utils.h  VulkanEngineDevice.cpp  VulkanEngineDevice.h  VulkanEngineFrameInfo.h  VulkanEngineModel.cpp  VulkanEngineModel.h  VulkanEnginePipeline.cpp  VulkanEnginePipeline.h  VulkanEngineRenderer.cpp  VulkanEngineRenderer.h  VulkanEngineSwapChain.h  clang_run.sh  compileShaders.sh  main.cpp
src/rendering/: Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkDeserializer.cpp  ChunkDeserializer.h  ChunkManager.cpp  ChunkManager.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TerrainDeserializer.cpp  TerrainDeserializer.h  VulkanEngineBuffer.cpp  VulkanEngineBuffer.h  VulkanEngineDescriptors.cpp  VulkanEngineDescriptors.h  VulkanEngineDevice.cpp  VulkanEngineDevice.h  VulkanEngineFrameInfo.h  VulkanEngineModel.cpp  VulkanEngineModel.h  VulkanEnginePipeline.cpp  VulkanEnginePipeline.h  VulkanEngineRenderer.cpp  VulkanEngineRenderer.h  VulkanEngineSwapChain.cpp  VulkanEngineWindow.cpp  VulkanEngineWindow.h
src/rendering/gui/: DebugGui.cpp  DebugGui.h  imgui_impl_vulkan.h
src/sandbox/: SandboxApp.cpp
src/shaders/: shader.frag
src/systems/: PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
src/tinyobjloader/: tiny_obj_loader.h
src/vulkan-engine/: VulkanEngine.h
src/vulkan-engine/src/: Application.h  EntryPoint.h  Game.cpp  Game.h
src/vulkan-engine/src/profiling/: Timer.h
src/vulkan-engine/src/rendering/: Block.h  Chunk.cpp  Chunk.h  ChunkDeserializer.h  ChunkManager.cpp  ChunkManager.h  GameObject.cpp  GameObject.h  VulkanEngineBuffer.cpp  VulkanEngineDescriptors.h  VulkanEngineDevice.cpp  VulkanEngineDevice.h  VulkanEngineModel.cpp  VulkanEngineModel.h  VulkanEnginePipeline.cpp  VulkanEnginePipeline.h  VulkanEngineRenderer.cpp  VulkanEngineRenderer.h  VulkanEngineSwapChain.cpp  VulkanEngineUtils.h  VulkanEngineWindow.h
src/vulkan-engine/src/systems/: PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
vulkan-engine/: VulkanEngine.h
vulkan-engine/include/: Application.h  CoordinateSystem.h  Core.h  EntryPoint.h  Game.h  GlobalConfiguration.h  Input.h  KeyCodes.h  KeyboardMovementController.h  Layer.h  LayerStack.h  MouseButtonCodes.h
vulkan-engine/include/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
vulkan-engine/include/imgui/: ImGuiLayer.h
vulkan-engine/include/logging/: Log.h
vulkan-engine/include/platform/linux/: LinuxInput.h  LinuxWindow.h
vulkan-engine/include/platform/vulkan/: VulkanBuffer.h  VulkanContext.h  VulkanDescriptors.h  VulkanDevice.h  VulkanFrameInfo.h  VulkanGameObject.h  VulkanModel.h  VulkanPipeline.h  VulkanPointLightSystem.h  VulkanRenderSystem.h  VulkanRenderer.h  VulkanSwapChain.h
vulkan-engine/include/precompiled_headers/: PCH.h
vulkan-engine/include/profiling/: Timer.h
vulkan-engine/include/renderer/: GraphicsContext.h
vulkan-engine/include/rendering/: Block.h  Camera.h  Chunk.h  ChunkDeserializer.h  ChunkManager.h  GameObject.h  VulkanDescriptors.h  VulkanDevice.h  VulkanEngineDevice.h  VulkanEngineModel.h  VulkanEnginePipeline.h  VulkanEngineRenderer.h  VulkanEngineWindow.h  VulkanRenderer.h  VulkanSwapChain.h  Window.h
vulkan-engine/include/rendering/gui/: DebugGui.h
vulkan-engine/include/systems/: PointLightSystem.h  SimpleRenderSystem.h
vulkan-engine/src/: Application.cpp  Game.cpp  KeyboardMovementController.cpp  Layer.cpp  LayerStack.cpp
vulkan-engine/src/imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp
vulkan-engine/src/logging/: Log.cpp
vulkan-engine/src/platform/linux/: LinuxInput.cpp  LinuxWindow.cpp
vulkan-engine/src/platform/vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanDevice.cpp  VulkanGameObject.cpp  VulkanModel.cpp  VulkanPipeline.cpp  (+4 more)
vulkan-engine/src/rendering/: Block.cpp  Camera.cpp  Chunk.cpp  ChunkDeserializer.cpp  ChunkManager.cpp  GameObject.cpp  VulkanDescriptors.cpp  VulkanDevice.cpp  VulkanEngineBuffer.cpp  VulkanEngineDescriptors.cpp  VulkanEngineDevice.cpp  VulkanEngineModel.cpp  VulkanEnginePipeline.cpp  VulkanEngineRenderer.cpp  VulkanEngineSwapChain.cpp  VulkanEngineWindow.cpp  VulkanRenderer.cpp  VulkanSwapChain.cpp
vulkan-engine/src/systems/: PointLightSystem.cpp  SimpleRenderSystem.cpp
(+7 files in other folders)
